--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="/src/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce Shop</title>
     <meta
@@ -10,7 +11,7 @@
       content="A simple e-commerce shop built with Vue.js and Vite."
     />
   </head>
-  <body>
+  <body class="min-h-full bg-gray-50 text-gray-900">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
